samples/_failures_safe/1761458200_e83808_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1885e839.c: In function ‘main’:
./samples/SAFE/__tmp_1885e839.c:131:12: error: expected declaration or statement at end of input
  131 |     struct Token token;
      |            ^~~~~
